<resources>
    <string name="app_name">Latest News</string>
    <string name="api_key" translatable="false">cafbaab7b19a4789b9ff456dbc1e903f</string>

    <string name="country_code">us</string>
    <string name="latest_news">Latest news</string>
    <string name="tech_label">Technology</string>
    <string name="sci_label">Science</string>
    <string name="sports_label">Sports</string>
    <string name="health_label">Health</string>
    <string name="entertainment_label">Entertainment</string>
    <string name="politics_label">Politics</string>
    <string name="latest_news_about">Latest news about </string>
</resources>