<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/latest_news"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_tech"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                card_view:cardCornerRadius="10dp"
                android:elevation="10dp">

                <FrameLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/purple_700">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_tech"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_gravity="bottom"
                        android:padding="5dp"
                        android:textColor="@color/white"
                        android:text="@string/tech_label"/>
                </FrameLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_sci"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                card_view:cardCornerRadius="10dp"
                android:elevation="10dp">

                <FrameLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/purple_700">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_science"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_gravity="bottom"
                        android:padding="5dp"
                        android:textColor="@color/white"
                        android:text="@string/sci_label"/>
                </FrameLayout>
            </androidx.cardview.widget.CardView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_sports"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                card_view:cardCornerRadius="10dp"
                android:elevation="10dp">

                <FrameLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/purple_700">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_sports"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_gravity="bottom"
                        android:padding="5dp"
                        android:textColor="@color/white"
                        android:text="@string/sports_label"/>
                </FrameLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_health"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                card_view:cardCornerRadius="10dp"
                android:elevation="10dp">

                <FrameLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/purple_700">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_health"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_gravity="bottom"
                        android:padding="5dp"
                        android:textColor="@color/white"
                        android:text="@string/health_label"/>
                </FrameLayout>
            </androidx.cardview.widget.CardView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_entertainment"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                card_view:cardCornerRadius="10dp"
                android:elevation="10dp">

                <FrameLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/purple_700">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_entertainment"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="13sp"
                        android:layout_gravity="bottom"
                        android:padding="5dp"
                        android:textColor="@color/white"
                        android:text="@string/entertainment_label"/>
                </FrameLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_politics"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                card_view:cardCornerRadius="10dp"
                android:elevation="10dp">

                <FrameLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/purple_700">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_politics"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_gravity="bottom"
                        android:padding="5dp"
                        android:textColor="@color/white"
                        android:text="@string/politics_label"/>
                </FrameLayout>
            </androidx.cardview.widget.CardView>
        </TableRow>

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>